--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     restart: unless-stopped
     environment:
       - GEMINI_API_KEY=${GEMINI_API_KEY:-}
-      - MAIL_SERVER=${MAIL_SERVER:-smtp.gmail.com}
+      - MAIL_SERVER=${MAIL_SERVER:-wes1-smtp.wedos.net}
       - MAIL_PORT=${MAIL_PORT:-587}
-      - MAIL_USERNAME=${MAIL_USERNAME:-}
-      - MAIL_PASSWORD=${MAIL_PASSWORD:-}
+      - MAIL_USERNAME=${MAIL_USERNAME:-info@it-dk.sk}
+      - MAIL_PASSWORD=${MAIL_PASSWORD:-Izpipe2+}
     networks:
       - itdk-network
     healthcheck:
