Add visitor tracking with email notifications
Implemented comprehensive tracking system that captures and sends email notifications for each page visit with detailed visitor information including IP address, geolocation (country, region, city), ISP, referrer, and user agent.

Changes:
- Add /api/track endpoint with IP geolocation via ip-api.com
- Integrate automatic tracking on frontend page load
- Add TRACKING_EMAIL environment variable configuration
- Update documentation with tracking setup instructions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - MAIL_PORT=${MAIL_PORT:-587}
       - MAIL_USERNAME=${MAIL_USERNAME:-info@it-dk.sk}
       - MAIL_PASSWORD=${MAIL_PASSWORD:-Izpipe2+}
+      - TRACKING_EMAIL=${TRACKING_EMAIL:-info@it-dk.sk}
     networks:
       - itdk-network
     healthcheck:
