--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -10,6 +10,12 @@
   "theme_color": "#7C3AED",
   "icons": [
     {
+      "src": "/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
       "src": "/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
