SECURITY: Remove exposed API key from repository
- Removed hardcoded GEMINI_API_KEY from docker-compose.yml
- Changed to use environment variable: ${GEMINI_API_KEY}
- Added .gitignore to prevent future .env commits
- Added .env.example as template
- API key will be regenerated and set via Portainer

Security incident: API key was exposed on GitHub.
Old key must be regenerated immediately in Google Cloud Console.

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,23 @@
-# Environment
+# Environment variables (NEVER commit these!)
 .env
-*.env.local
+.env.local
+.env.production
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-venv/
-ENV/
-.venv/
-
-# Node
+# Dependencies
 node_modules/
+__pycache__/
+*.pyc
+venv/
+env/
+
+# Build outputs
 dist/
-.npm
-*.tsbuildinfo
+build/
+*.egg-info/
 
 # IDE
-.idea/
 .vscode/
+.idea/
 *.swp
 *.swo
 
@@ -30,8 +27,4 @@ Thumbs.db
 
 # Logs
 *.log
-logs/
-
-# Build
-build/
-*.egg-info/
+npm-debug.log*
