--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: itdk-backend
     restart: unless-stopped
     environment:
-      - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - GEMINI_API_KEY=AIzaSyDxP6bcmttCtVEbLYVNyd0MTv9L037ZiGM
       - MAIL_SERVER=${MAIL_SERVER:-wes1-smtp.wedos.net}
       - MAIL_PORT=${MAIL_PORT:-587}
       - MAIL_USERNAME=${MAIL_USERNAME:-info@it-dk.sk}
